EE9 kompatibel build.